--- a/Ch07/src/main/resources/templates/user4/modify.html
+++ b/Ch07/src/main/resources/templates/user4/modify.html
@@ -21,8 +21,8 @@
 			<tr>
 				<td>성별</td>
 				<td>
-					<label><input type="radio" name="gender" value="1" th:checked="${user.gender eq '1'}">남</label>
-					<label><input type="radio" name="gender" value="2" th:checked="${user.gender eq '2'}">여</label>
+					<label><input type="radio" name="gender" value="1" th:checked="${user.gender eq 1}">남</label>
+					<label><input type="radio" name="gender" value="2" th:checked="${user.gender eq 2}">여</label>
 				</td>
 			</tr>
 			<tr>
