--- a/Ch07/src/main/resources/templates/user1/list.html
+++ b/Ch07/src/main/resources/templates/user1/list.html
@@ -5,8 +5,8 @@
 		<title>user1::list</title>
 	</head>
 	<body>
-		<h3>user1 목록</h3><a th:href="@{/}">메인화면</a><br/>
-		<a th:href="@{/user1/register}">user1 등록</a><br/>
+		<h3>user1 목록</h3><a th:href="@{/}">처음으로</a>
+		<a th:href="@{/user1/register}">user1 등록</a>
 		<table border="1">
 			<tr>
 				<th>아이디</th>
