--- a/Ch07/src/main/resources/templates/user4/list.html
+++ b/Ch07/src/main/resources/templates/user4/list.html
@@ -20,13 +20,13 @@
 			<tr th:each="user:${users}">
 				<td>[[${user.seq}]]</td>
 				<td>[[${user.name}]]</td>
-				<td th:if="${user.gender eq '1'}">남</td>
-				<td th:unless="${user.gender eq '1'}">여</td>
+				<td th:if="${user.gender eq 1}">남</td>
+				<td th:unless="${user.gender eq 1}">여</td>
 				<td>[[${user.age}]]</td>
 				<td>[[${user.addr}]]</td>
 				<td>
-					<a th:href="@{/user4/modify(uid=${user.uid})}">수정</a>
-					<a th:href="@{/user4/delete(uid=${user.uid})}">삭제</a>
+					<a th:href="@{/user4/modify(seq=${user.seq})}">수정</a>
+					<a th:href="@{/user4/delete(seq=${user.seq})}">삭제</a>
 				</td>
 			</tr>
 		</table>
