--- a/Ch07/src/main/resources/templates/user4/register.html
+++ b/Ch07/src/main/resources/templates/user4/register.html
@@ -12,7 +12,7 @@
 			<table border="1">
 				<tr>
 					<td>이름</td>
-					<td><input type="text" name="uid"></td>
+					<td><input type="text" name="name"></td>
 				</tr>
 				<tr>
 					<td>성별</td>
